# ForWin

./: .dockerignore  .env.example  .gitignore  .mcp.json  AGENTS.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  tests_support.py
.circleci/: config.yml
.claude/: settings.local.json.minimax-moved-to-246-20260517T225913Z
.codex-tmp/: raspi-bastion-hardening.sh
.github/: pull_request_template.md
.playwright-cli/: page-2026-04-01T05-22-56-265Z.yml  page-2026-04-01T05-23-05-779Z.yml  page-2026-04-01T05-25-12-842Z.yml  page-2026-04-01T05-33-01-176Z.yml  page-2026-04-01T22-04-44-129Z.yml  page-2026-04-01T22-04-44-139Z.yml  page-2026-04-01T22-06-22-685Z.yml  page-2026-04-20T07-47-44-730Z.yml  page-2026-04-20T07-48-08-578Z.yml  page-2026-04-20T07-48-25-299Z.yml  page-2026-04-20T07-51-15-054Z.yml  page-2026-04-20T07-51-23-393Z.yml  page-2026-04-20T07-51-44-136Z.yml  page-2026-04-20T07-53-21-318Z.yml  page-2026-04-20T07-53-23-920Z.yml  page-2026-04-20T07-53-38-831Z.yml  page-2026-04-20T08-35-32-651Z.yml  page-2026-04-20T08-35-56-703Z.yml  page-2026-04-20T09-06-04-291Z.yml  page-2026-04-20T09-06-14-055Z.yml  page-2026-04-20T09-06-33-279Z.yml  page-2026-04-20T09-20-41-700Z.yml  page-2026-04-20T09-40-31-149Z.yml  page-2026-04-20T09-44-09-179Z.yml  page-2026-04-20T09-44-21-986Z.yml  page-2026-04-20T09-44-31-525Z.yml  page-2026-04-20T09-44-36-825Z.yml  page-2026-04-20T09-44-43-236Z.yml  page-2026-04-20T09-44-52-965Z.yml  page-2026-04-20T09-45-25-017Z.yml  page-2026-04-20T09-45-29-631Z.yml  page-2026-04-20T10-13-12-744Z.yml  (+5 more)
Design-docs/: V2_8.md  (+36 more)
(+1362 files in other folders)
