[project]
name = "forwin"
version = "0.5.0"
description = "面向几百章连载的长篇中文网文生成系统"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.9",
    "sqlalchemy>=2.0",
    "httpx>=0.27",
    "fastapi>=0.115",
    "fastmcp>=2.13,<3",
    "uvicorn[standard]>=0.34",
    "playwright>=1.52",
    "qdrant-client>=1.11",
    "minio>=7.2",
]

[project.optional-dependencies]
test = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
]

[tool.setuptools.packages.find]
include = ["forwin*"]

[project.scripts]
forwin = "forwin.cli:main"
forwin-codex-bridge = "forwin.codex_bridge.__main__:main"
